<resources>
    <string name="app_name">ChatBaseAsio</string>

    <string name="ip_address">IP&#160;&#160;&#160;&#160;&#8201;:&#8201;</string>
    <string name="port">Port&#8201;:&#8201;</string>
    <string name="connect_to_server">Connect</string>
    <string name="create_a_server">Create</string>
    <string name="server">Server</string>
    <string name="client">Client</string>
    <string name="create_as">Create as :</string>
    <string name="server_title">Server :</string>
    <string name="send">Send</string>
    <string name="input_msg">Input...</string>
</resources>
